--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
+    <meta content="*" http-equiv="Access-Control-Allow-Origin"/>
+    <meta content="X-Requested-With" http-equiv="Access-Control-Allow-Headers"/>
     <meta content="max-age=31536000" http-equiv="Cache-control">
     <link href="%PUBLIC_URL%/favicon.ico" rel="shortcut icon"/>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
