auto reload page every 12 hour

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
+    <meta content="43200" http-equiv="refresh">
     <meta content="*" http-equiv="Access-Control-Allow-Origin"/>
     <meta content="X-Requested-With" http-equiv="Access-Control-Allow-Headers"/>
     <meta content="max-age=31536000" http-equiv="Cache-control">
